--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- TEMPLATE CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- SWIPER LINK HERE -->
 </head>
 <body>
     <!--***************** HEADER SECTION **********************-->
@@ -32,26 +33,55 @@
 
     <!--***************** HERO SECTION **********************-->
     <section id="home" class="home">
-        <div class="home-slider">
-            <div class="wrapper">
-                <div class="slide">
+        <div class="swiper-container home-slider">
+            <div class="swiper-wrapper wrapper">
+                <div class="swiper-slide slide">
                     <div class="content">
                         <span>Enjoy Our Special Ice Cream</span>
                         <h3>Cool Ice Cream</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id saepe sunt, modi cupiditate soluta doloribus?
                         </p>
-                        <a href="#order" class="btn">order now</a>
+                        <a href="#order" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
                     </div>
                     <div class="image">
                         <img src="images/img1.jpeg" alt="">
                     </div>
                 </div>
+                <!-- <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>Enjoy Our Special Ice Cream</span>
+                        <h3>Cool Ice Cream</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id saepe sunt, modi cupiditate soluta doloribus?
+                        </p>
+                        <a href="#order" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                    </div>
+                    <div class="image">
+                        <img src="images/img3.jpeg" alt="">
+                    </div>
+                </div> -->
+                <!-- <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>Enjoy Our Special Ice Cream</span>
+                        <h3>Cool Ice Cream</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id saepe sunt, modi cupiditate soluta doloribus?
+                        </p>
+                        <a href="#order" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                    </div>
+                    <div class="image">
+                        <img src="images/img2.jpeg" alt="">
+                    </div>
+                </div> -->
             </div>
+            <div class="swiper-pagination"></div>
         </div>
     </section>      
     <!--***************** HERO SECTION END **********************-->
 
     <script src="script.js"></script>
+    <!-- SWIPER LINK HERE -->
+
 </body>
 </html>
