--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="#home" class="logo"><img src="images/logo.jpeg" alt=""></a>
         <nav class="navbar">    
             <a href="#home" class="active">Home</a>
-            <a href="#menu">Menu</a>
             <a href="#special">Special</a>
+            <a href="#menu">Menu</a>            
             <a href="#about">About</a>                
             <a href="#review">Review</a>
             <a href="#order">Order</a>                      
@@ -79,6 +79,106 @@
         </div>
     </section>      
     <!--***************** HERO SECTION END **********************-->
+
+
+    <!--***************** SPECIAL SECTION **********************-->
+    <section class="special" id="special">
+        <h1 class="heading">Popular Ice Cream</h1>
+        <div class="box-container">
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img4.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img7.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img1.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img3.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img5.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img9.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+        </div>
+    </section>
+    <!--***************** SPECIAL SECTION END **********************-->
+
 
     <script src="script.js"></script>
     <!-- SWIPER LINK HERE -->
