--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="navbar">    
             <a href="#home" class="active">Home</a>
             <a href="#special">Special</a>
-            <a href="#menu">Menu</a>            
-            <a href="#about">About</a>                
-            <a href="#review">Review</a>
+            <a href="#view">view</a>
+            <a href="#menu">Menu</a>             
+            <a href="#about">About</a>          
             <a href="#order">Order</a>                      
         </nav>
         <div class="icons">
@@ -178,6 +178,194 @@
         </div>
     </section>
     <!--***************** SPECIAL SECTION END **********************-->
+
+
+    <!--***************** REVIEW SECTION **********************-->
+    <section class="top" id="view">
+        <h1 class="heading">Top Ice Cream</h1>
+        <div class="row">
+            <div class="image-container">
+                <div class="small-image">
+                    <img src="images/ty1.jpeg" class="top-image">
+                    <img src="images/ty2.jpeg" class="top-image">
+                    <img src="images/ty3.jpeg" class="top-image">
+                    <img src="images/ty5.jpeg" class="top-image">
+                </div>
+                <div class="big-image">
+                    <img src="images/ty8.jpeg" class="big-image1">
+                </div>
+            </div>
+            <div class="content">
+                <h3>New Top Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab eius consequatur corrupti similique! Sequi quas, doloribus nostrum ipsam ut ipsum.
+                </p>
+                <div class="price">Ksh. 300 <span>Ksh. 350</span></div>
+                <a href="#order" class="btn">add to cart</a>
+            </div>
+        </div>
+    </section>
+    <!--***************** REVIEW SECTION END **********************-->
+
+
+    <!--***************** MENU SECTION **********************-->
+    <section class="menu" id="menu">
+        <h3 class="heading">Menu</h3>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="images/ty7.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/ty6.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/ty1.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/ty8.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/ty3.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!--***************** MENU SECTION END **********************-->
+
+
+    <!--***************** ABOUT SECTION **********************-->
+    <section class="about" id="about">
+        <h5 class="heading">about us</h5>
+        <div class="row">
+            <div class="image">
+                <img src="images/img8.jpeg" alt="">
+            </div>
+            <div class="content">
+                <h3>Bestice cream the country</h3>
+                <p>
+                    BestIceCream is a company that specializes in selling delicious ice cream.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nihil.
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quam perferendis labore similique accusamus eaque dolorem commodi earum debitis.
+                </p>
+                <div class="icons-container">
+                    <div class="icons">
+                        <i class="fab fa-truck"></i>
+                        <span>fast delivery</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fab fa-clock"></i>
+                        <span>24/7 service</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fab fa-dollar"></i>
+                        <span>easy pay</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+    </section>
+    <!--***************** ABOUT SECTION END **********************-->
 
 
     <script src="script.js"></script>
