--- a/index.html
+++ b/index.html
@@ -242,6 +242,27 @@
             </div>
             <div class="box">
                 <div class="image">
+                    <img src="images/ty5.jpeg" alt="">
+                    <a href="#" class="fa fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h3>Delicious Ice Cream</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, sint.
+                    </p>
+                    <a href="#order" class="btn">add to cart</a>
+                    <span class="price">Ksh. 300</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
                     <img src="images/ty6.jpeg" alt="">
                     <a href="#" class="fa fa-heart"></a>
                 </div>
@@ -349,15 +370,15 @@
                 </p>
                 <div class="icons-container">
                     <div class="icons">
-                        <i class="fab fa-truck"></i>
+                        <i class="fa fa-truck"></i>
                         <span>fast delivery</span>
                     </div>
                     <div class="icons">
-                        <i class="fab fa-clock"></i>
+                        <i class="fa fa-clock"></i>
                         <span>24/7 service</span>
                     </div>
                     <div class="icons">
-                        <i class="fab fa-dollar"></i>
+                        <i class="fa fa-dollar"></i>
                         <span>easy pay</span>
                     </div>
                 </div>
@@ -366,6 +387,12 @@
         </div>
     </section>
     <!--***************** ABOUT SECTION END **********************-->
+
+
+    <!--***************** FOOTER SECTION **********************-->
+    <div class="copy-right">
+        © 2024 Best Ice Cream Co., Ltd. All Rights Reserved. | BLACKSHARK
+    </div>
 
 
     <script src="script.js"></script>
