--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </nav>
         <div class="icons">
             <i class="fa fa-magnifying-glass"></i>
+            <i class="fa fa-user-circle"></i>
             <a href="#order" class="fa fa-cart-shopping"></a>
             <i class="fa fa-bars" id="bars"></i>
         </div>  
@@ -42,10 +43,10 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id saepe sunt, modi cupiditate soluta doloribus?
                         </p>
-                        <a href="#order" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                        <a href="#special" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
                     </div>
                     <div class="image">
-                        <img src="images/img1.jpeg" alt="">
+                        <img src="images/ty3.jpeg" alt="">
                     </div>
                 </div>
                 <!-- <div class="swiper-slide slide">
@@ -88,7 +89,7 @@
             <div class="box">
                 <a href="#" class="fa fa-heart"></a>
                 <a href="#" class="fa fa-eye"></a>
-                <img src="images/img4.jpeg" alt="">
+                <img src="images/img8.jpeg" alt="">
                 <h3>Tasty Ice Cream</h3>
                 <div class="stars">
                     <i class="fa fa-star"></i>
@@ -98,7 +99,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
             </div>
             <div class="box">
                 <a href="#" class="fa fa-heart"></a>
@@ -113,37 +114,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
-            </div>
-            <div class="box">
-                <a href="#" class="fa fa-heart"></a>
-                <a href="#" class="fa fa-eye"></a>
-                <img src="images/img1.jpeg" alt="">
-                <h3>Tasty Ice Cream</h3>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
-            </div>
-            <div class="box">
-                <a href="#" class="fa fa-heart"></a>
-                <a href="#" class="fa fa-eye"></a>
-                <img src="images/img3.jpeg" alt="">
-                <h3>Tasty Ice Cream</h3>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
             </div>
             <div class="box">
                 <a href="#" class="fa fa-heart"></a>
@@ -158,7 +129,37 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img3.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+            </div>
+            <div class="box">
+                <a href="#" class="fa fa-heart"></a>
+                <a href="#" class="fa fa-eye"></a>
+                <img src="images/img5.jpeg" alt="">
+                <h3>Tasty Ice Cream</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <span>Ksh. 300</span>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
             </div>
             <div class="box">
                 <a href="#" class="fa fa-heart"></a>
@@ -173,7 +174,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <span>Ksh. 300</span>
-                <a href="#order" class="btn">ad to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
+                <a href="#order" class="btn">add to cart<i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
             </div>
         </div>
     </section>
