--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="#special" class="btn">order now <i class="fa fa-cart-shopping" style="margin-inline-start: .5rem;"></i></a>
                     </div>
                     <div class="image">
-                        <img src="images/ty3.jpeg" alt="">
+                        <img src="images/home.png" alt="">
                     </div>
                 </div>
                 <!-- <div class="swiper-slide slide">
